[workspace]
resolver = "2"
members = [
    "crates/ide",
    "crates/syntax",
    "crates/glas",
    "crates/gleam-interop"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.67"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 2
