[package]
name = "glas"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
la-arena = "0.3.0"
argh = "0.1.10"
atty = "0.2.14"
async-process = "1.7.0"
codespan-reporting = "0.11.1"
crossbeam-channel="0.5.6"
futures = { version = "0.3.28", features = [ "async-await",  "std" ]}
ide = { path = "../ide" }
log = "0.4.17"
gleam-interop = { path = "../gleam-interop" }
async-lsp = {version = "0.0.5", features = ["tokio"] }
lsp-types = "0.94.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.82"
slab = "0.4.8"
smol_str = "0.1.23"
tokio = { version = "1.32.0", features = ["io-std", "macros", "rt", "sync", "time"] }
tokio-util = {version = "0.7.9", features = ["compat"]}
tower = "0.4.13"
toml = "0.7.4"
text-size = "1.1.0"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
walkdir = "2.3.2"

[dependencies.tracing-subscriber]
version = "0.3.15"
default_features = false
features = [
    "env-filter",
    "fmt",
    "smallvec",
    "std",
    "tracing-log",
]

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.3", default-features = false, features = ["fs", "std"] }

[target.'cfg(windows)'.dependencies]
tokio-util = {version = "0.7.9", features = ["compat"]}