[package]
name = "gleam-interop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
smol_str = "0.1.23"
tokio = { version = "1.27.0", features = ["io-util", "macros", "process", "sync"] }
tracing = { version = "0.1.37", features = ["release_max_level_info"] }

[dependencies.tracing-subscriber]
version = "0.3.15"
default_features = false
features = [
    "env-filter",
    "fmt",
    "smallvec",
    "std",
    "tracing-log",
]