[package]
name = "gleamalyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argh = "0.1.10"
codespan-reporting = "0.11.1"
crossbeam-channel="0.5.6"
ide = { path = "../ide" }
log = "0.4.17"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
serde_json = "1.0.82"
text-size = "1.1.0"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
libc = "0.2.137"

[dependencies.tracing-subscriber]
version = "0.3.15"
default_features = false
features = [
    "env-filter",
    "fmt",
    "smallvec",
    "std",
    "tracing-log",
]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.137"