[package]
name = "ide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
la-arena = "0.3.0"
indexmap = "1.9.1"
ordered-float = "3.4.0"
salsa = "0.17.0-pre.2"
smallvec = { version = "1.10.0", features = ["const_generics", "union"] }
smol_str = "0.1.23"
anymap = "0.12.1"
syntax = { path = "../syntax" }

[dev-dependencies]
anyhow = "1.0.60"
expect-test = "1.4.0"