[package]
name = "ide"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
la-arena = "0.3.0"
indexmap = "1.9.1"
itertools = "0.10.5"
ordered-float = "3.4.0"
once_cell = "1.17.0"
memchr = "2.5.0"
salsa = "0.17.0-pre.2"
smallvec = { version = "1.10.0", features = ["const_generics", "union"] }
smol_str = "0.1.23"
anymap = "0.12.1"
nohash-hasher = "0.2.0"
petgraph = "0.6.3"
syntax = { path = "../syntax" }
tracing = { version = "0.1.37", features = ["release_max_level_info"] }

[dependencies.tracing-subscriber]
version = "0.3.15"
default_features = false
features = [
    "env-filter",
    "fmt",
    "smallvec",
    "std",
    "tracing-log",
]

[dev-dependencies]
anyhow = "1.0.60"
expect-test = "1.4.0"
tracing-test = "0.1"