[package]
name = "syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
rowan = "0.15.10"
smol_str = "0.1.24"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }

[dependencies.tracing-subscriber]
version = "0.3.15"
default_features = false
features = [
    "env-filter",
    "fmt",
    "smallvec",
    "std",
    "tracing-log",
]

[dev-dependencies]
criterion = "0.3"
expect-test = "1.4.1"

[[bench]]
name = "lexer_bench"
harness = false

